# ai-cowork-assistant

./: .gitignore  AGENTS.md  README.md  SPEC.md  components.json  init-dev.sh  last_session.md  opencode.json  package.json  pyrightconfig.json  session-ses_3929.md  tiptap_extensions.txt  tsconfig.json  vite.config.ts
.agents/skills/phoenix-llama-index-instrumentor/: SKILL.md
.agents/skills/react-19/: SKILL.md
.agents/skills/react-hooks-patterns/: SKILL.md
.agents/skills/react-hooks-with-global-storage/: SKILL.md
prisma/: README.md  schema.prisma
src/: App.tsx
src-python/: README.md  api.spec  config.py  generate_types.py  main.py  observability.py  pyinstaller.py  requirements.txt  schemas.py  storage.py
src-python/routers/: __init__.py  completion.py  embedding.py  health.py  workflows.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  sidecar.rs
src/components/: AppRouter.tsx  ProjectEditor.tsx
src/components/ui/: calendar.tsx  context-menu.tsx  sidebar.tsx
src/lib/: api-types.ts  artifacts.ts  chats.ts  db.ts  markdown-streaming.ts  messages.ts  projects.ts  query.ts  schema.ts  sidecar.ts
src/lib/db/: README.md  config.ts  index.ts  query-builder.ts  sqlite.ts  types.ts
src/lib/tables/: artifacts.ts  chats.ts  messages.ts
src/loaders/: root.loader.ts
src/pages/: ConfigDisplayPage.tsx  LoaderPage.tsx  Project.tsx  ProjectsPage.tsx  SetupPage.tsx
src/stores/: config-store.ts  project-store.ts  projects-store.ts
src/styles/: editor.css
